force-app/main/default/objects/Booking_AdjustmentItems__c/Booking_AdjustmentItems__c.object-meta.xml
<CustomObject>
    <description>SOX object - To capture booking line item details which is supposed to be debooked</description>
    <label>Booking Adjustment Item</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>Booking Adjustment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Adjustment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>