force-app/main/default/objects/Booking_AdjustmentItems__c/fields/Adjusted_Item_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Item_Total_Price__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>