force-app/main/default/objects/Booking_AdjustmentItems__c/fields/CCR__c.field-meta.xml
<CustomField>
    <fullName>CCR__c</fullName>
    <label>CCR</label>
    <referenceTo>CCR__c</referenceTo>
    <relationshipLabel>Booking Adjustment Items</relationshipLabel>
    <relationshipName>Booking_AdjustmentItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>