force-app/main/default/objects/Booking_AdjustmentItems__c/fields/Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Booking Adjustment Items</relationshipLabel>
    <relationshipName>Booking_Adjustment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>