force-app/main/default/objects/Booking_AdjustmentItems__c/fields/OrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OrderLineItemId__c</fullName>
    <label>OrderLineItemId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>